Add frontend docs for GitHub Pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,8 @@ document.getElementById("predictBtn").onclick = async function() {
   resDiv.innerText = "Sending request...";
 
   try {
-    const resp = await fetch("http://127.0.0.1:8000/predict", {
+    const resp = await fetch("https://soil-moisture-backend-r7m2.onrender.com/predict", {
+
       method: "POST",
       headers: {"Content-Type":"application/json"},
       body: JSON.stringify({temperature: temp, humidity: hum, rainfall: rain, soil_type: soil})
