--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-ï»¿<!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8"/>
@@ -25,7 +25,7 @@
 
     <div class="row">
       <div class="col">
-        <label>Temperature (Â°C) <input id="temperature" type="number" value="25"></label>
+        <label>Temperature (°C) <input id="temperature" type="number" value="25"></label>
       </div>
       <div class="col">
         <label>Humidity (%) <input id="humidity" type="number" value="60"></label>
@@ -50,10 +50,10 @@
     <button id="predictBtn">Predict Moisture</button>
 
     <div id="result" class="result" style="display:block; margin-top:18px;">
-      <div id="summary" class="pill"><span id="moistText">Moisture: â€”</span> &nbsp; <span id="catText">Category: â€”</span></div>
+      <div id="summary" class="pill"><span id="moistText">Moisture: —</span> &nbsp; <span id="catText">Category: —</span></div>
 
       <div class="info-box">
-        <strong id="actionText">â€”</strong>
+        <strong id="actionText">—</strong>
         <div id="explainText" style="color:#666; margin-top:8px;"></div>
       </div>
 
@@ -169,3 +169,4 @@ document.getElementById("predictBtn").addEventListener("click", async function (
 </script>
 </body>
 </html>
+
